# Trading_System

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  source_request.md
.github/workflows/: tests.yml
data_loop/: __init__.py  binance_client.py  cli.py  collector.py  data_vision_client.py  db.py  repository.py
docs/: CHECKLIST.md  DEPLOYMENT.md  LOOP_CONTRACTS.md  ROADMAP.md  VISION.md  architecture.md
experiment_loop/: __init__.py  cli.py  db.py  models.py  planner.py  repository.py
loops/: README.md
loops/_template/: README.md
loops/data_loop/: README.md
loops/experiment_loop/: README.md
loops/research_loop/: README.md  sources.json
prompts/: classify_item.md  extract_research_records.md  score_record.md
research_loop/: __init__.py  cli.py  config.py  db.py  dedupe.py  evaluation.py  event_log.py  extraction.py  models.py  monitor.py  normalization.py  openai_extraction.py  ops.py  pipeline.py  quality.py  record_export.py  repository.py  seeds.py  source_config.py  utils.py
research_loop/collectors/: __init__.py  base.py  http.py  reddit.py  (+1 more)
tests/: test_config.py  test_data_loop.py  test_dedupe.py  test_evaluation.py  test_event_log.py  test_experiment_loop.py  test_extraction.py  test_monitor.py  test_normalization.py  test_openai_extraction.py  test_ops.py  test_quality.py  test_record_export.py  test_records.py  test_repository.py  test_scheduling.py  test_source_config.py
