[project]
name = "trading-research-loop"
version = "0.3.0"
description = "A source-backed research ingestion loop for trading strategy discovery."
requires-python = ">=3.11"
dependencies = []
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
research-loop = "research_loop.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["research_loop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
